Added RecalculateDensityCoefficient controller
