# models/fuelgasmodel.go
@@ -28,13 +28,13 @@ type SetManualFuelGas struct {
 
 type GetDensityCoefficient struct {
 	DensityCoefficient *float64 `gorm:"column:value"`
-	SyncHistory        []SyncHistory
+	CalculationHistory []CalculationHistory
 }
 
-type SyncHistory struct {
-	StartDate time.Time `gorm:"column:startdate"`
-	EndDate   time.Time `gorm:"column:enddate"`
-	UserName  string    `gorm:"column:username"`
-	SyncMode  string    `gorm:"column:syncmode"`
-	Value     *float64  `gorm:"column:dcvalue"`
+type CalculationHistory struct {
+	StartDate *time.Time `gorm:"column:startdate"`
+	EndDate   *time.Time `gorm:"column:enddate"`
+	UserName  string     `gorm:"column:username"`
+	SyncMode  string     `gorm:"column:syncmode"`
+	Value     *float64   `gorm:"column:dcvalue"`
 }
